# everything_about_agent

./: .gitignore  AGENTS.md  CODEBUDDY.md  LICENSE  README.md  final_report.py  mkdocs.yml  prompt.txt  pyproject.toml  start.bat  start.sh  verify_system.py
.pids/: mkdocs_server.pid  web_server.pid
Agent_design_pattern/: Appendix A_ Advanced Prompting Techniques.docx  Appendix B - AI Agentic Interactions_ From GUI to Real world environment.docx  Appendix C - Quick overview of Agentic Frameworks.docx  Appendix D - Building an Agent with AgentSpace (on-line only).docx  Appendix E - AI Agents on the CLI.docx  Appendix F  - Under the Hood_ An Inside Look at the Agents' Reasoning Engines.docx  Appendix F  - Under the Hood_ An Inside Look at the Agents' Reasoning Engines.md  Chapter 10_ Model Context Protocol (MCP).docx  Chapter 11_ Goal Setting and Monitoring.docx  Chapter 12_ Exception Handling and Recovery.docx  Chapter 13_ Human-in-the-Loop.docx  Chapter 15_ Inter-Agent Communication (A2A).docx  Chapter 16_ Resource-Aware Optimization.docx  Chapter 1_ Prompt Chaining.docx  Chapter 20_ Prioritization.docx  Chapter 21_ Exploration and Discovery.docx  Chapter 2_ Routing.docx  Chapter 3_ Parallelization.docx  Chapter 4_ Reflection.docx  Chapter 5_ Tool Use.docx  Chapter 8_ Memory Management.docx  【原文】Chapter 2_ Routing.docx  【原文】Chapter 2_ Routing.md  【笔记】Chapter 2_ Routing.docx  【翻译】Chapter 2_ Routing.docx  【翻译】Chapter 2_ Routing.md  【脑图】Chapter 2_ Routing.xmind
configs/: app.yaml  models.yaml  tools.yaml
docs/: SKILLS_GUIDE.md  UV_SETUP.md  UV_SETUP_CHANGELOG.md  (+3 more)
(+178 files in other folders)
